--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "dependencies": {
     "@hapi/hapi": "^20.1.0",
     "@hapi/jwt": "^2.0.1",
+    "amqplib": "^0.8.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "joi": "^17.4.0",
     "nanoid": "^3.1.20",
     "node-pg-migrate": "^5.9.0",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "redis": "^4.0.0"
   }
 }
